--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,5 @@ jobs:
     steps:
     - uses: RalfG/python-wheels-manylinux-build@v0.2.2-manylinux2010_x86_64
       with:
-        python-versions: 'cp36-cp36m cp37-cp37m'
-        build-requirements: 'cython numpy'
-        system-packages: 'lrzip-devel zlib-devel'
-        package-path: 'my_project'
-        pip-wheel-args: '--no-deps'
+        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38m'
+        build-requirements: 'cython colorama'
