--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,11 +5,52 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  make_wheels:
+    name: ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, windows-latest, ubuntu-latest]
 
     steps:
-    - uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2010_x86_64
-      with:
-        python-versions: 'cp36-cp36m cp37-cp37m cp38-cp38m'
-        build-requirements: 'cython colorama'
+
+      ## Setup Env
+
+      - uses: actions/checkout@v2.1.1
+        with:
+          submodules: recursive
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
+      - name: Install Deps
+        # only need scikit-build for the linux sdist step
+        run: pip install --upgrade cibuildwheel scikit-build twine
+
+      - uses: ilammy/msvc-dev-cmd@v1.2.0
+        if: startsWith(matrix.os, 'windows')
+
+      ## Build across platforms
+
+      - name: Build Windows
+        if: startsWith(matrix.os, 'windows')
+        env:
+          CC: cl.exe
+          CXX: cl.exe
+          CIBW_SKIP: pp* cp27* *-win32
+        run: |
+          python -m cibuildwheel --output-dir wheelhouse
+      - name: Build Mac
+        if: startsWith(matrix.os, 'mac')
+        env:
+          CIBW_SKIP: pp*
+        run: |
+          python -m cibuildwheel --output-dir wheelhouse
+      - name: Build Linux
+        if: startsWith(matrix.os, 'ubuntu')
+        env:
+          CIBW_SKIP: pp* cp27* *-manylinux_i686
+        run: |
+          python -m cibuildwheel --output-dir wheelhouse
+          python setup.py sdist --dist-dir=wheelhouse
