--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [bdist_wheel]
 
 [metadata]
-description-file = README.rst
-license-file = LICENSE.txt
+description_file = README.rst
+license_file = LICENSE.txt
